# recipebook-huang-julyannafrancesca

./: .gitignore  pyproject.toml
.github/workflows/: black.yml  isort.yml
ledger/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ledger/migrations/: 0001_initial.py  0002_alter_ingredient_name_alter_recipe_name.py  0002_alter_recipeingredient_quantity.py  0003_alter_recipeingredient_recipe.py  0004_alter_recipeingredient_ingredient.py  0005_auto_20250316_0317.py  0006_alter_recipe_author_delete_profile.py  0007_recipeimage.py
ledger/templates/: base.html
ledger/templates/ledger/: ingredient_add.html  recipe_add.html  recipe_detail.html  recipe_list.html  recipeimage_add.html  recipeingredient_add.html
recipebook/: settings.py  urls.py
templates/registration/: login.html
user/: admin.py  models.py
user/migrations/: 0001_initial.py
