[tool.poetry]
name = "recipebook-huang-julyannafrancesca"
version = "0.1.0"
description = ""
authors = ["Julyanna Francesca C. Huang <julyannahuang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
pillow = "^11.1.0"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
